[package]
edition      = "2024"
name         = "keybo"
rust-version = "1.89"
version      = "0.1.0"

[[bin]]
name = "keybo"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }

esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp32s3"] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time     = "0.5.0"
esp-alloc        = "0.9.0"

critical-section = "1.2.0"
static_cell      = "2.1.1"
esp32_hid = "0.1.0"
esp-backtrace = {version ="0.18.1", features = ["esp32s3", "println", "panic-handler"]}
esp-hal-smartled = "0.17.0"
smart-leds = "0.4.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

